# meshmoon-plugins

./: .gitignore  README.md  changelog.html
MeshmoonAssimpPlugin/: CMakeLists.txt  MeshmoonAssimpPlugin.cpp  MeshmoonAssimpPlugin.h  MeshmoonAssimpPluginApi.h  MeshmoonAssimpPluginFwd.h  MeshmoonOpenAssetImporter.cpp  MeshmoonOpenAssetImporter.h  StableHeaders.h
MeshmoonCommon/: CMakeLists.txt  (+6 more)
MeshmoonComponents/: .gitignore  CMakeLists.txt  EC_MediaBrowser.cpp  EC_MediaBrowser.h  EC_Meshmoon3DText.h  EC_MeshmoonAvatar.cpp  EC_MeshmoonAvatar.h  EC_MeshmoonCulling.cpp  EC_MeshmoonCulling.h  EC_MeshmoonOccluder.cpp  EC_MeshmoonOccluder.h  EC_MeshmoonTeleport.cpp  EC_MeshmoonTeleport.h  EC_WebBrowser.cpp  EC_WebBrowser.h  EC_WebBrowser_Protocol.h  MeshmoonComponents.cpp  MeshmoonComponents.h  MeshmoonComponentsApi.h  StableHeaders.cpp  StableHeaders.h
MeshmoonComponents/rocketmediaplayer/: CMakeLists.txt  MediaPlayerNetwork.cpp  MediaPlayerNetwork.h  MediaPlayerNetworkMessages.h  RocketMediaPlayer.cpp  RocketMediaPlayer.h  RocketMediaPlayer_Manual.vcxproj  main.cpp
MeshmoonComponents/rocketmediaplayer/resources/: RocketMediaPlayer.rc
MeshmoonComponents/rocketwebbrowser/: BrowserNetwork.cpp  BrowserNetwork.h  BrowserNetworkMessages.h  BrowserTemplate.pro  CMakeLists.txt  CefIntegration.cpp  CefIntegration.h  RocketWebBrowser.cpp  RocketWebBrowser.h  RocketWebBrowser_Manual.vcxproj  main.cpp
MeshmoonComponents/ui/: EC_MeshmoonTeleport.ui  meshmooncomponents-resources.qrc
MeshmoonEnvironmentPlugin/: CMakeLists.txt  EC_MeshmoonCloudLayer.cpp  EC_MeshmoonCloudLayer.h  EC_MeshmoonSky.cpp  EC_MeshmoonSky.h  EC_MeshmoonWater.cpp  EC_MeshmoonWater.h  MeshmoonEnvironmentPlugin.cpp  MeshmoonEnvironmentPluginApi.h  MeshmoonEnvironmentPluginFwd.h  MeshmoonSkyUtils.cpp  MeshmoonSkyUtils.h  MeshmoonWaterUtils.cpp  MeshmoonWaterUtils.h  StableHeaders.h
Rocket/: CMakeLists.txt  Rocket.rc  main.cpp
RocketConsole/: CMakeLists.txt  main.cpp
RocketPlugin/: CMakeLists.txt  MeshmoonAsset.cpp  MeshmoonAsset.h  MeshmoonAssetLibrary.cpp  MeshmoonAssetLibrary.h  MeshmoonBackend.cpp  MeshmoonBackend.h  MeshmoonData.cpp  MeshmoonData.h  MeshmoonUser.cpp  MeshmoonUser.h  MeshmoonWorld.cpp  MeshmoonWorld.h  RocketAssetMonitor.cpp  RocketAssetMonitor.h  RocketAvatarEditor.cpp  RocketAvatarEditor.h  RocketFwd.h  RocketLayersWidget.cpp  RocketLayersWidget.h  RocketLobbyWidget.cpp  RocketLobbyWidget.h  RocketLobbyWidgets.cpp  RocketLobbyWidgets.h  RocketMenu.cpp  RocketMenu.h  RocketNetworking.cpp  RocketNetworking.h  RocketNotifications.cpp  RocketNotifications.h  RocketOfflineLobby.cpp  RocketOfflineLobby.h  RocketPlugin.cpp  RocketPlugin.h  RocketReporter.cpp  RocketReporter.h  RocketSceneWidget.cpp  RocketSceneWidget.h  RocketScriptTypeDefines.h  RocketSettings.cpp  (+8 more)
RocketPlugin/buildmode/: RocketBlockPlacer.cpp  RocketBlockPlacer.h  RocketBuildComponentWidgets.cpp  RocketBuildComponentWidgets.h  RocketBuildContextWidget.cpp  RocketBuildContextWidget.h  RocketBuildEditor.cpp  RocketBuildEditor.h  RocketBuildWidget.cpp  RocketBuildWidget.h  RocketScenePackager.cpp  RocketScenePackager.h
RocketPlugin/cave/: RocketCaveAdvancedEditViewWidget.cpp  RocketCaveAdvancedEditViewWidget.h  RocketCaveAdvancedWidget.cpp  RocketCaveAdvancedWidget.h  RocketCaveManager.cpp  RocketCaveManager.h
RocketPlugin/doc/: EULA-Meshmoon-Rocket.rtf  EULA-Meshmoon-Rocket.txt  meshmoon.Doxyfile
RocketPlugin/editors/: IRocketAssetEditor.cpp  IRocketAssetEditor.h  RocketAssetSelectionWidget.cpp  RocketAssetSelectionWidget.h  RocketMaterialEditor.cpp  RocketMaterialEditor.h  RocketMeshEditor.cpp  RocketMeshEditor.h  RocketOgreSceneRenderer.cpp  RocketOgreSceneRenderer.h  RocketParticleEditor.cpp  RocketParticleEditor.h  RocketSyntaxHighlighters.cpp  RocketSyntaxHighlighters.h  RocketTextEditor.cpp  RocketTextEditor.h  RocketTextureEditor.cpp  RocketTextureEditor.h
RocketPlugin/occlusion/: RocketOcclusionManager.cpp  RocketOcclusionManager.h
RocketPlugin/oculus/: RocketOculusManager.cpp  RocketOculusManager.h
RocketPlugin/presis/: RocketPresis.cpp  RocketPresis.h  RocketPresisWidget.cpp  RocketPresisWidget.h  RocketSplineCurve3D.cpp  RocketSplineCurve3D.h
RocketPlugin/rendering/: RocketGPUProgramConstant.cpp  RocketGPUProgramConstant.h  RocketGPUProgramGenerator.cpp  RocketGPUProgramGenerator.h
RocketPlugin/storage/: MeshmoonStorage.cpp  MeshmoonStorage.h  MeshmoonStorageDialogs.cpp  MeshmoonStorageDialogs.h  MeshmoonStorageHelpers.cpp  MeshmoonStorageHelpers.h  MeshmoonStorageItem.cpp  MeshmoonStorageItem.h  MeshmoonStorageWidget.cpp  MeshmoonStorageWidget.h  RocketStorageSceneImporter.cpp  RocketStorageSceneImporter.h
RocketPlugin/ui/: AboutMeshmoonDialog.ui  AboutTundraDialog.ui  RocketAssetSelectionDialog.ui  RocketAssetSelectionWidget.ui  RocketAvatarEditorControlsWidget.ui  RocketAvatarEditorWidget.ui  RocketAvatarWidget.ui  RocketBuildContextWidget.ui  RocketBuildWidget.ui  RocketCaveAdvancedEditViewWidget.ui  RocketCaveAdvancedWidget.ui  RocketCaveManagerWidget.ui  RocketComponentConfigurationDialog.ui  RocketLayersWidget.ui  RocketLicensesWidget.ui  RocketLobbyWidget.ui  RocketMaterialEditorWidget.ui  RocketMaterialTextureWidget.ui  RocketMeshEditorWidget.ui  RocketNotificationWidget.ui  RocketOfflineLobby.ui  RocketOfflineLobbyButton.ui  RocketParticleAffectorWidget.ui  RocketParticleEditorWidget.ui  RocketParticleEmitterWidget.ui  RocketPlugin.qrc  RocketPresisControlsWidget.ui  RocketPresisWidget.ui  RocketPromotedServerWidget.ui  RocketResourceEditor.ui  RocketSceneOptimizerWidget.ui  RocketServerWidget.ui  RocketSettingsWidget.ui  RocketStorageAuthWidget.ui  RocketStorageInfoWidget.ui  RocketStorageSceneImportWidget.ui  RocketStorageSelectionDialog.ui  RocketStorageWidget.ui  RocketSupportRequestDialog.ui  RocketTaskbarWidget.ui
RocketPlugin/updater/: AutoUpdater.h  RocketUpdater.cpp  RocketUpdater.h  SparkleAutoUpdater.h
RocketPlugin/utils/: RocketAnimations.cpp  RocketAnimations.h  RocketAnimationsFwd.h  RocketFileSystem.cpp  RocketFileSystem.h  RocketZipWorker.cpp  RocketZipWorker.h
(+99 files in other folders)
